app 0.26.0, other things

--- a/index.html
+++ b/index.html
@@ -135,6 +135,8 @@
 									</header>
 									<a href="images/landscape_screenshot.png" class="image fit"><img src="images/landscape_screenshot.png" alt="" /></a>
 									<a href="images/tablet_screenshot.png" class="image fit"><img src="images/tablet_screenshot.png" alt="" /></a-->
+									<a href="images/tablet_grid_screenshot.png" class="image fit"><img src="images/tablet_grid_screenshot.png" alt="" /></a-->
+
 								</article>
 								<!--article>
 									<header>
