Update to link to free Play Store version

--- a/index.html
+++ b/index.html
@@ -24,15 +24,15 @@
 						<p>scratch your beat fast</p>
 						<ul class="actions">
 							<li>
-								<a class="icon" href="assets/app-release.apk">
-									<img style="max-width: 100%; margin-right: 10px;" src="images/beatscratch.png" width="64px" height="64px" />
-									<br/><span>Download free</span>
+								<a class="icon" href="https://play.google.com/store/apps/details?id=com.jonlatane.beatpad.free">
+								  <img style="max-width: 100%" src="https://play.google.com/intl/en_us/badges/images/generic/en_badge_web_generic.png" width="163px" height="64px" />
+									<br/><span>5-part support: free</span>
 								</a>
 							</li>
 							<li>
 								<a class="icon" href="https://play.google.com/store/apps/details?id=com.jonlatane.beatpad">
 								  <img style="max-width: 100%" src="https://play.google.com/intl/en_us/badges/images/generic/en_badge_web_generic.png" width="163px" height="64px" />
-								  <br/><span>Automatic updates for $1</span>
+								  <br/><span>8-part support: $1</span>
 								</a>
 							</li>
 						</ul>
@@ -42,7 +42,7 @@
 					<header id="header">
 						<a href="index.html" class="logo">BeatScratch</a>
 					</header>
-
+8-
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
@@ -68,7 +68,7 @@
 									<h2>Unleash your<br />
 									musical potential</h2>
 								</header>
-								<a href="images/upcoming_feature.png" class="image main" style="max-width: 600px; height: auto; margin-left: auto; margin-right: auto;"><img src="images/upcoming_feature.png" alt="" /></a>
+								<a href="images/feature_image.png" class="image main" style="max-width: 600px; height: auto; margin-left: auto; margin-right: auto;"><img src="images/feature_image.png" alt="" /></a>
 								<p>
 								  BeatScratch is <i>not</i> yet another keyboard app. BeatScratch turns
 								  the phone in your pocket into an instrument that can be used to play
@@ -91,15 +91,15 @@
 								
 								<ul class="actions">
 									<li>
-										<a class="icon" href="assets/app-release.apk">
-											<img style="max-width: 100%; margin-right: 10px;" src="images/beatscratch.png" width="64px" height="64px" />
-											<br/><span>Download free</span>
+										<a class="icon" href="https://play.google.com/store/apps/details?id=com.jonlatane.beatpad">
+											<img style="max-width: 100%" src="https://play.google.com/intl/en_us/badges/images/generic/en_badge_web_generic.png" width="163px" height="64px" />
+											<br/><span>5-part support: free</span>
 										</a>
 									</li>
 									<li>
 										<a class="icon" href="https://play.google.com/store/apps/details?id=com.jonlatane.beatpad">
-										  <img style="max-width: 100%" src="https://play.google.com/intl/en_us/badges/images/generic/en_badge_web_generic.png" width="163px" height="64px" />
-										  <br/><span>Automatic updates for $1</span>
+											<img style="max-width: 100%" src="https://play.google.com/intl/en_us/badges/images/generic/en_badge_web_generic.png" width="163px" height="64px" />
+											<br/><span>8-part support: $1</span>
 										</a>
 									</li>
 								</ul>
@@ -134,8 +134,8 @@
 										<h2>Designed for all (touch) screen shapes and sizes</h2>
 									</header>
 									<a href="images/landscape_screenshot.png" class="image fit"><img src="images/landscape_screenshot.png" alt="" /></a>
-									<a href="images/tablet_screenshot.png" class="image fit"><img src="images/tablet_screenshot.png" alt="" /></a-->
-									<a href="images/tablet_grid_screenshot.png" class="image fit"><img src="images/tablet_grid_screenshot.png" alt="" /></a-->
+									<a href="images/landscape_wide_screenshot.png" class="image fit"><img src="images/landscape_wide_screenshot.png" alt="" /></a>
+									<a href="images/big_tablet_screenshot.png" class="image fit"><img src="images/big_tablet_screenshot.png" alt="" /></a>
 
 								</article>
 								<!--article>
@@ -165,6 +165,18 @@
 									</ul>
 								</article-->
 							</section>
+
+							
+							<article class="post featured">
+								<ul class="actions">
+									<li>
+										<span class="icon" href="https://play.google.com/store/apps/details?id=com.jonlatane.beatpad">
+											<img style="max-width: 100%; margin-right: 10px;" src="images/beatscratch.png" width="64px" height="64px" />
+											<br/><span>(Future) MusicXML/MIDI Export: $1/month each</span>
+										</span>
+									</li>
+								</ul>
+							</article>
 
 						<!-- Footer -->
 							<!--footer>
