--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>BeatScratch: scratch your beat fast</title>
+		<title>BeatScratch: pocket instrument and staff paper</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -21,7 +21,7 @@
 				<!-- Intro -->
 					<div id="intro">
 						<h1>BeatScratch</h1>
-						<p>scratch your beat fast</p>
+						<p>pocket instrument and staff paper</p>
 						<ul class="actions">
 							<li>
 								<a class="icon" href="https://play.google.com/store/apps/details?id=com.jonlatane.beatpad.free">
