--- a/app/index.html
+++ b/app/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="Music for everyone">
+  <meta name="description" content="A new Flutter project.">
 
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
@@ -25,7 +25,7 @@
   <script src="https://www.gstatic.com/firebasejs/7.12.0/firebase-firestore.js"></script>
   <script src="https://www.gstatic.com/firebasejs/7.12.0/firebase-analytics.js"></script>
 
-  <title>BeatScratch Web Pre-Alpha</title>
+  <title>beatscratch_flutter_redux</title>
   <link rel="manifest" href="manifest.json">
   <style>
     @font-face {
@@ -63,11 +63,6 @@
       color: #4DFA90;
     }
 
-    #banner {
-      position: fixed;
-      z-index: 999;
-    }
-
   </style>
   <script>
     function hideBanner() {
@@ -78,10 +73,10 @@
 </head>
 <body>
   <span id="banner">
-    <span style="font-family: VulfSans; font-size: 24px; color: white;">
+    <span style="font-family: VulfSans; font-size: 24px">
       <b>BeatScratch Web</b>
     </span>
-    <span style="font-family: VulfSans; font-size: 18px; color: white;">
+    <span style="font-family: VulfSans; font-size: 18px">
       is pre-alpha. Ports to iOS and Mac are coming, with the <a href="index.html">Android App already available</a>.
     </span>
     <span style="font-family: VulfSans; font-size: 20px; padding-left:30px">
