--- a/app-staging/index.html
+++ b/app-staging/index.html
@@ -27,19 +27,19 @@
 
   <!-- MIDI.js -->
   <!-- polyfill -->
-  <script src="../MIDI.js/inc/shim/Base64.js" type="text/javascript"></script>
-  <script src="../MIDI.js/inc/shim/Base64binary.js" type="text/javascript"></script>
-  <script src="../MIDI.js/inc/shim/WebAudioAPI.js" type="text/javascript"></script>
+  <script src="MIDI.js/inc/shim/Base64.js" type="text/javascript"></script>
+  <script src="MIDI.js/inc/shim/Base64binary.js" type="text/javascript"></script>
+  <script src="MIDI.js/inc/shim/WebAudioAPI.js" type="text/javascript"></script>
   <!-- midi.js package -->
-  <script src="../MIDI.js/js/midi/audioDetect.js" type="text/javascript"></script>
-  <script src="../MIDI.js/js/midi/gm.js" type="text/javascript"></script>
-  <script src="../MIDI.js/js/midi/loader.js" type="text/javascript"></script>
-  <script src="../MIDI.js/js/midi/plugin.audiotag.js" type="text/javascript"></script>
-  <script src="../MIDI.js/js/midi/plugin.webaudio.js" type="text/javascript"></script>
-  <script src="../MIDI.js/js/midi/plugin.webmidi.js" type="text/javascript"></script>
+  <script src="MIDI.js/js/midi/audioDetect.js" type="text/javascript"></script>
+  <script src="MIDI.js/js/midi/gm.js" type="text/javascript"></script>
+  <script src="MIDI.js/js/midi/loader.js" type="text/javascript"></script>
+  <script src="MIDI.js/js/midi/plugin.audiotag.js" type="text/javascript"></script>
+  <script src="MIDI.js/js/midi/plugin.webaudio.js" type="text/javascript"></script>
+  <script src="MIDI.js/js/midi/plugin.webmidi.js" type="text/javascript"></script>
   <!-- utils -->
-  <script src="../MIDI.js/js/util/dom_request_xhr.js" type="text/javascript"></script>
-  <script src="../MIDI.js/js/util/dom_request_script.js" type="text/javascript"></script>
+  <script src="MIDI.js/js/util/dom_request_xhr.js" type="text/javascript"></script>
+  <script src="MIDI.js/js/util/dom_request_script.js" type="text/javascript"></script>
   <!-- /MIDI.js -->
 
 
