--- a/app-staging/index.html
+++ b/app-staging/index.html
@@ -52,7 +52,7 @@
 
 window.onload = function () {
 	MIDI.loadPlugin({
-		soundfontUrl: "../MIDI.js/examples/soundfont/",
+		soundfontUrl: "MIDI.js/examples/soundfont/",
 		instrument: "acoustic_grand_piano",
 		onprogress: function(state, progress) {
 			console.log(state, progress);
