--- a/app-staging/index.html
+++ b/app-staging/index.html
@@ -50,6 +50,11 @@
 
 <script type="text/javascript">
 
+function sendMIDI(args) {
+  console.info("invoking sendMIDI with args:");
+  console.info(args)
+}
+
 window.onload = function () {
 	MIDI.loadPlugin({
 		soundfontUrl: "MIDI.js/examples/soundfont/",
@@ -70,7 +75,7 @@ window.onload = function () {
 };
 
 </script>
-  <script>
+<script>
       var firebaseConfig = {
         apiKey: "AIzaSyBODLuKyOB3mgwv_QHRjjWT6uGEbAyq2Qw",
         authDomain: "beatscratch-app.firebaseapp.com",
@@ -85,16 +90,16 @@ window.onload = function () {
       firebase.initializeApp(firebaseConfig);
       firebase.analytics();
   </script>
-  <!-- This script installs service_worker.js to provide PWA functionality to
-       application. For more information, see:
-       https://developers.google.com/web/fundamentals/primers/service-workers -->
-  <script>
+<!-- This script installs service_worker.js to provide PWA functionality to
+     application. For more information, see:
+     https://developers.google.com/web/fundamentals/primers/service-workers -->
+<script>
     if ('serviceWorker' in navigator) {
       window.addEventListener('load', function () {
         navigator.serviceWorker.register('flutter_service_worker.js');
       });
     }
   </script>
-  <script src="main.dart.js" type="application/javascript"></script>
+<script src="main.dart.js" type="application/javascript"></script>
 </body>
 </html>
