--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="index.html" class="logo">BeatScratch</a>
+						<a href="app" class="logo">Web App Preview</a>
 					</header>
 8-
 				<!-- Nav -->
