--- a/index.html
+++ b/index.html
@@ -62,6 +62,50 @@
 					<div id="main">
 
 						<!-- Featured Post -->
+						<article class="post featured">
+							<header class="major">
+								<!--span class="date">April 25, 2017</span-->
+								<h2>BeatFlutter and ProtoBeats</h2>
+							</header>
+							<p>
+								The remainder of this page is about the existing BeatScratch product, with 
+								free and paid apps on Android. Its next-generation cousin can be previewed 
+								on the Web and macOS now, and will be ported to Android and iOS.
+							</p>
+							<table>
+								<thead>
+									<tr><td></td><td><h3>Web</h3></td><td><h3>macOS</h3></td><td><h3>iOS</h3></td><td><h3>Android</h3></td></tr>
+								</thead>
+								<tr><td><h3>User Interface</h3></td><td colspan="4"><img src="assets/flutter.png" width="300" height="87"/></td></tr>
+								<tr><td><h3>Platform</h3></td>
+									<td colspan="1"><pre>dart:js</pre></td>
+									<td colspan="3">Platform Channels</td>
+								</tr>
+								<tr><td><h3>Data Modeling</h3></td>
+									<td colspan="4">
+										<a class="icon" href="https://grpc.io/"><img style="background-color: grey;" src="assets/grpc-logo.png" width="150" height="66"/></a>
+										<a class="icon" href="https://midi.org/"><img style="background-color: grey;" src="assets/midi-logo.jpg" width="150" height="66"/></a> <br/>
+										Protobuf and MIDI <span style="font-family: monospace;">bytes</span></ptr>
+									</td></tr>
+								<tr><td><h3>Audio</h3></td>
+									<td colspan="1"><a href="https://github.com/mudcube/MIDI.js/">MIDI.js</a></td>
+									<td colspan="2"><a class="icon" href="https://audiokit.org/"><img  src="assets/audiokit-logo.png" width="150" height="66"/></td>
+									<td colspan="1"><a href="https://github.com/FluidSynth/fluidsynth/">FluidSynth</a></td>
+								</tr>
+							</table>
+							<p>
+								All tiers except for the UI will be ported to a Flutter plugin called ProtoBeats. 
+								Use the link below or the shortcut hidden near the top of this page to access the Web App Preview:
+							</p>
+						
+							<ul class="actions">
+								<li>
+									<a href="app"><h2>Preview the Web App</h2></a>
+								</li>
+							</ul>
+						</article>
+
+						<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
 									<!--span class="date">April 25, 2017</span-->
