--- a/index.html
+++ b/index.html
@@ -69,8 +69,9 @@
 							</header>
 							<p>
 								The remainder of this page is about the existing BeatScratch product, with 
-								free and paid apps on Android. Its next-generation cousin can be previewed 
-								on the Web and macOS now, and will be ported to Android and iOS.
+								free and paid apps on Android. Its next-generation cousin, named BeatFlutter 
+								until it is complete and can be named BeatScratch, can be previewed now on 
+								the Web and macOS, and will be ported to Android and iOS.
 							</p>
 							<table>
 								<thead>
@@ -96,6 +97,9 @@
 							<p>
 								All tiers except for the UI will be ported to a Flutter plugin called ProtoBeats. 
 								Use the link below or the shortcut hidden near the top of this page to access the Web App Preview:
+							</p>
+							<p>
+								Not all of the below features are yet available in BeatFlutter. But they will be.
 							</p>
 						
 							<ul class="actions">
