--- a/index.html
+++ b/index.html
@@ -98,15 +98,14 @@
 								All tiers except for the UI will be ported to a Flutter plugin called ProtoBeats. 
 								Use the link below or the shortcut hidden near the top of this page to access the Web App Preview:
 							</p>
-							<p>
-								Not all of the below features are yet available in BeatFlutter. But they will be.
-							</p>
-						
 							<ul class="actions">
 								<li>
 									<a href="app"><h2>Preview the Web App</h2></a>
 								</li>
 							</ul>
+							<p>
+								Not all of the below features are yet available in BeatFlutter. But they will be.
+							</p>
 						</article>
 
 						<!-- Featured Post -->
@@ -215,7 +214,7 @@
 							</section>
 
 							
-							<article class="post featured">
+							<!-- <article class="post featured">
 								<ul class="actions">
 									<li>
 										<span class="icon" href="https://play.google.com/store/apps/details?id=com.jonlatane.beatpad">
@@ -224,7 +223,7 @@
 										</span>
 									</li>
 								</ul>
-							</article>
+							</article> -->
 
 						<!-- Footer -->
 							<!--footer>
