--- a/index.html
+++ b/index.html
@@ -77,22 +77,29 @@
 								<thead>
 									<tr><td></td><td><h3>Web</h3></td><td><h3>macOS</h3></td><td><h3>iOS</h3></td><td><h3>Android</h3></td></tr>
 								</thead>
-								<tr><td><h3>User Interface</h3></td><td colspan="4"><img src="assets/flutter.png" width="300" height="87"/></td></tr>
-								<tr><td><h3>Platform</h3></td>
-									<td colspan="1"><pre>dart:js</pre></td>
-									<td colspan="3">Platform Channels</td>
-								</tr>
-								<tr><td><h3>Data Modeling</h3></td>
+								<tr><td><h3>User<br/>Interface</h3></td>
+									<td colspan="4"><a class="icon" style="top:30px;" href="https://flutter.dev/"><img src="assets/flutter.png" width="300" height="87"/></a></td></tr>
+								<tr><td><h3>Data<br/>Modeling</h3></td>
 									<td colspan="4">
 										<a class="icon" href="https://grpc.io/"><img style="background-color: grey;" src="assets/grpc-logo.png" width="150" height="66"/></a>
 										<a class="icon" href="https://midi.org/"><img style="background-color: grey;" src="assets/midi-logo.jpg" width="150" height="66"/></a> <br/>
 										Protobuf and MIDI <span style="font-family: monospace;">bytes</span></ptr>
 									</td></tr>
-								<tr><td><h3>Audio</h3></td>
+								<tr><td><h3>Platform<br/>Interface</h3></td>
+									<td colspan="1"><pre>dart:js</pre></td>
+									<td colspan="3">Platform Channels</td>
+								</tr>
+								<tr><td><h3>Platform<br/>Audio</h3></td>
 									<td colspan="1"><a href="https://github.com/mudcube/MIDI.js/">MIDI.js</a></td>
-									<td colspan="2"><a class="icon" href="https://audiokit.org/"><img  src="assets/audiokit-logo.png" width="150" height="66"/></td>
+									<td colspan="2"><a class="icon" style="top:30px;" href="https://audiokit.org/"><img  src="assets/audiokit-logo.png" width="150" height="66"/></td>
 									<td colspan="1"><a href="https://github.com/FluidSynth/fluidsynth/">FluidSynth</a></td>
 								</tr>
+								<tr>
+									<td><h3>Try It</h3></td>
+									<td><a href="app"><h2>Open</h2></a></td>
+									<td><a class="icon" href="https://www.dropbox.com/s/71jclv5a5tgd1c7/BeatFlutter.tar.bz2?dl=1" style="top:13px;"><img style="background-color: grey;" src="assets/macos-download.png" width="150" height="47"></a></td>
+									<td><h3>Coming soon</h3></td>
+									<td><h3>Coming soon</h3></td></tr>
 							</table>
 							<p>
 								All tiers except for the UI will be ported to a Flutter plugin called ProtoBeats. 
