add testflight and google play beta links

--- a/index.html
+++ b/index.html
@@ -97,9 +97,21 @@
 								<tr>
 									<td><h3>Try It</h3></td>
 									<td><a href="app"><h2>Open</h2></a></td>
-									<td><a class="icon" href="https://www.dropbox.com/s/71jclv5a5tgd1c7/BeatFlutter.tar.bz2?dl=1" style="top:13px;"><img style="background-color: grey;" src="assets/macos-download.png" width="150" height="47"></a></td>
-									<td><h3>Coming soon</h3></td>
-									<td><h3>Coming soon</h3></td></tr>
+									<td>
+										<a class="icon" href="https://www.dropbox.com/s/71jclv5a5tgd1c7/BeatFlutter.tar.bz2?dl=1" style="top:13px;">
+											<img style="background-color: grey;" src="assets/macos-download.png" width="150" height="47">
+										</a>
+									</td>
+									<td>
+										<a class="icon" href="https://testflight.apple.com/join/dXJr9JJs" style="top:20px;">
+											<img style="max-width: 100%" src="assets/testflight-badge.png" width="163px" height="63px" />
+										</a>
+									</td>
+									<td>
+										<a class="icon" href="https://play.google.com/apps/testing/io.beatscratch.beatscratch_flutter_redux" style="top:20px;">
+											<img style="max-width: 100%" src="https://play.google.com/intl/en_us/badges/images/generic/en_badge_web_generic.png" width="163px" height="64px" />
+										</a>
+									</td></tr>
 							</table>
 							<p>
 								All tiers except for the UI will be ported to a Flutter plugin called ProtoBeats. 
