--- a/index.html
+++ b/index.html
@@ -24,15 +24,18 @@
 						<p>pocket instrument and staff paper</p>
 						<ul class="actions">
 							<li>
-								<a class="icon" href="https://play.google.com/store/apps/details?id=com.jonlatane.beatpad.free">
-								  <img style="max-width: 100%" src="https://play.google.com/intl/en_us/badges/images/generic/en_badge_web_generic.png" width="163px" height="64px" />
-									<br/><span>5-part support: free</span>
+								<a class="icon" href="https://play.google.com/apps/testing/io.beatscratch.beatscratch_flutter_redux" style="top:20px;">
+									<img style="max-width: 100%" src="https://play.google.com/intl/en_us/badges/images/generic/en_badge_web_generic.png" width="163px" height="64px" />
 								</a>
 							</li>
 							<li>
-								<a class="icon" href="https://play.google.com/store/apps/details?id=com.jonlatane.beatpad">
-								  <img style="max-width: 100%" src="https://play.google.com/intl/en_us/badges/images/generic/en_badge_web_generic.png" width="163px" height="64px" />
-								  <br/><span>8-part support: $5</span>
+								<a class="icon" href="https://testflight.apple.com/join/dXJr9JJs" style="top:20px;">
+									<img style="max-width: 100%" src="assets/testflight-badge.png" width="163px" height="63px" />
+								</a>
+							</li>
+							<li>
+								<a class="icon" href="https://www.dropbox.com/s/71jclv5a5tgd1c7/BeatFlutter.tar.bz2?dl=1" style="top:20px;">
+									<img style="background-color: grey;" src="assets/macos-download.png" width="150" height="47">
 								</a>
 							</li>
 						</ul>
@@ -74,29 +77,77 @@
 								the Web and macOS, and will be ported to Android and iOS.
 							</p>
 							<table>
-								<thead>
-									<tr><td></td><td><h3>Web</h3></td><td><h3>macOS</h3></td><td><h3>iOS</h3></td><td><h3>Android</h3></td></tr>
-								</thead>
-								<tr><td><h3>User<br/>Interface</h3></td>
-									<td colspan="4"><a class="icon" style="top:30px;" href="https://flutter.dev/"><img src="assets/flutter.png" width="300" height="87"/></a></td></tr>
-								<tr><td><h3>Data<br/>Modeling</h3></td>
-									<td colspan="4">
-										<a class="icon" href="https://grpc.io/"><img style="background-color: grey;" src="assets/grpc-logo.png" width="150" height="66"/></a>
-										<a class="icon" href="https://midi.org/"><img style="background-color: grey;" src="assets/midi-logo.jpg" width="150" height="66"/></a> <br/>
-										Protobuf and MIDI <span style="font-family: monospace;">bytes</span></ptr>
-									</td></tr>
-								<tr><td><h3>Platform<br/>Interface</h3></td>
-									<td colspan="1"><pre>dart:js</pre></td>
-									<td colspan="3">Platform Channels</td>
-								</tr>
-								<tr><td><h3>Platform<br/>Audio</h3></td>
-									<td colspan="1"><a href="https://github.com/mudcube/MIDI.js/">MIDI.js</a></td>
-									<td colspan="2"><a class="icon" style="top:30px;" href="https://audiokit.org/"><img  src="assets/audiokit-logo.png" width="150" height="66"/></td>
-									<td colspan="1"><a href="https://github.com/FluidSynth/fluidsynth/">FluidSynth</a></td>
+								<tr><td colspan="2"><h2>Try the Pre-Release</h2></td></tr>
+								<tr>
+									<td><h5>macOS</h5></td>
+									<td>
+										<a class="icon" href="https://www.dropbox.com/s/71jclv5a5tgd1c7/BeatFlutter.tar.bz2?dl=1" style="top:13px;">
+											<img style="background-color: grey;" src="assets/macos-download.png" width="150" height="47">
+										</a>
+									</td>
 								</tr>
 								<tr>
-									<td><h3>Try It</h3></td>
-									<td><a href="app"><h2>Open</h2></a></td>
+									<td><h5>iOS</h5></td>
+									<td>
+										<a class="icon" href="https://testflight.apple.com/join/dXJr9JJs" style="top:20px;">
+											<img style="max-width: 100%" src="assets/testflight-badge.png" width="163px" height="63px" />
+										</a>
+									</td>
+								</tr>
+								<tr>
+									<td><h5>Android</h5></td>
+									<td>
+										<a class="icon" href="https://play.google.com/apps/testing/io.beatscratch.beatscratch_flutter_redux" style="top:20px;">
+											<img style="max-width: 100%" src="https://play.google.com/intl/en_us/badges/images/generic/en_badge_web_generic.png" width="163px" height="64px" />
+										</a>
+									</td>
+								</tr>
+								<tr>
+									<td><h5>Web</h5></td>
+									<td>
+										<a href="app"><h2>Open</h2></a>
+									</td>
+								</tr>
+							</table>
+							<p>
+								Feature support is varied among target platforms, but all are planned to support
+								playback and recording. See the feature comparison:
+							</p>
+							<div style="overflow-x: scroll;overflow-y: hidden;white-space: nowrap;">
+							<table>
+								<thead>
+									<tr><td colspan="5"><br/><h2>Pre-Release Features</h2></td></tr>
+									<tr>
+										<td style="width:10%;"></td>
+										<td style="width:22.5; min-width:180px;"><h3>macOS</h3></td>
+										<td style="width:22.5; min-width:180px;"><h3>iOS</h3></td>
+										<td style="width:22.5; min-width:180px;"><h3>Android</h3></td>
+										<td style="width:22.5; min-width:180px;"><h3>Web</h3></td>
+									</tr>
+								</thead>
+								<tr><td><h4>Play<br/>On-Screen<br/>Keyboard</h4></td>
+									<td colspan="4"><p><h2>Yes</h2></p></td>
+								</tr>
+								<tr><td><h4>Play<br/>Connected<br/>MIDI<br/>Controller</h4></td>
+									<td colspan="3"><p><h2>Yes</h2></p></td>
+									<td colspan="1"><p>
+										<h5>Planned;<br/><a href="https://caniuse.com/#search=midi">See caniuse.com</a></h5>
+									</p></td>
+								</tr>
+								<tr><td><h4>128<br/>MIDI<br/>Sounds<br/>+<br/>Drum Patch</h4></td>
+									<td colspan="3"><p><h2>Yes</h2></p></td>
+									<td colspan="1"><p><h5>127; "synth drums"<br/>are the drum patch.<br/>Drum patch doesn't<br/>meet MIDI standard<br/>...yet.</h5></p></td>
+								</tr>
+								<tr><td><h4>Sequencer<br/>Playback</h4></td>
+									<td colspan="2"><p><h3>Yes</h3></p></td>
+									<td colspan="2"><p><h5>Planned</h5></p></td>
+								</tr>
+								<tr><td><h4>Sequencer<br/>Recording</h4></td>
+									<td colspan="2"><p><h5>In Progress</h5></td>
+									<td colspan="2"><p><h5>Planned</h5></p></td>
+								</tr>
+								<tr>
+									<td><h2>Try It</h2></td>
 									<td>
 										<a class="icon" href="https://www.dropbox.com/s/71jclv5a5tgd1c7/BeatFlutter.tar.bz2?dl=1" style="top:13px;">
 											<img style="background-color: grey;" src="assets/macos-download.png" width="150" height="47">
@@ -111,8 +162,30 @@
 										<a class="icon" href="https://play.google.com/apps/testing/io.beatscratch.beatscratch_flutter_redux" style="top:20px;">
 											<img style="max-width: 100%" src="https://play.google.com/intl/en_us/badges/images/generic/en_badge_web_generic.png" width="163px" height="64px" />
 										</a>
-									</td></tr>
+									</td>
+									<td><a href="app"><h2>Open</h2></a></td>
+								</tr>
+									
+									<tr><td colspan="5"><br/><h2>Architectural Components:</h2></td></tr>
+									<tr><td><h3>User<br/>Interface</h3></td>
+										<td colspan="4"><a class="icon" style="top:30px;" href="https://flutter.dev/"><img src="assets/flutter.png" width="300" height="87"/></a></td></tr>
+									<tr><td><h3>Data<br/>Modeling</h3></td>
+										<td colspan="4">
+											<a class="icon" href="https://grpc.io/"><img style="background-color: grey;" src="assets/grpc-logo.png" width="150" height="66"/></a>
+											<a class="icon" href="https://midi.org/"><img style="background-color: grey;" src="assets/midi-logo.jpg" width="150" height="66"/></a> <br/>
+											Protobuf and MIDI <span style="font-family: monospace;">bytes</span></ptr>
+										</td></tr>
+									<tr><td><h3>Platform<br/>Interface</h3></td>
+										<td colspan="1"><pre>dart:js</pre></td>
+										<td colspan="3">Platform Channels</td>
+									</tr>
+									<tr><td><h3>Platform<br/>Audio</h3></td>
+										<td colspan="1"><a href="https://github.com/mudcube/MIDI.js/">MIDI.js</a></td>
+										<td colspan="2"><a class="icon" style="top:30px;" href="https://audiokit.org/"><img  src="assets/audiokit-logo.png" width="150" height="66"/></td>
+										<td colspan="1"><a href="https://github.com/FluidSynth/fluidsynth/">FluidSynth</a></td>
+									</tr>
 							</table>
+						</div>
 							<p>
 								All tiers except for the UI will be ported to a Flutter plugin called ProtoBeats. 
 								Use the link below or the shortcut hidden near the top of this page to access the Web App Preview:
