--- a/platforms.html
+++ b/platforms.html
@@ -74,7 +74,7 @@
 										<td colspan="2"><p><h5>Planned</h5></p></td>
 									</tr>
 									<tr><td><h4>Sequencer<br/>Recording</h4></td>
-										<td colspan="2"><p><h5>In Progress</h5></td>
+										<td colspan="2"><p><h3>Yes</h3></td>
 											<td colspan="1"><p><h5>Planned</h5></p></td>
 											<td colspan="1"><p><h5>TBD</h5></p></td>
 									</tr>
