Add hardware page

--- a/index.html
+++ b/index.html
@@ -51,7 +51,9 @@
 						<ul class="links">
 							<li class="active"><a href="index.html">Home</a></li>
 							<li><a href="usage.html">Usage</a></li>
-							<li><a href="https://medium.com/fully-automated-luxury-robot-music">Articles</a></li>
+							<li><a href="platforms.html">Platforms</a></li>
+							<li><a href="hardware.html">Hardware</a></li>
+							<li><a href="https://medium.com/fully-automated-luxury-robot-music">Blog</a></li>
 						</ul>
 						<!--ul class="icons">
 							<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
