--- a/platforms.html
+++ b/platforms.html
@@ -29,7 +29,8 @@
 							<li><a href="index.html">Home</a></li>
 							<li><a href="usage.html">Usage</a></li>
 							<li class="active"><a href="platforms.html">Platforms</a></li>
-							<li><a href="https://medium.com/fully-automated-luxury-robot-music">Articles</a></li>
+							<li><a href="hardware.html">Hardware</a></li>
+							<li><a href="https://medium.com/fully-automated-luxury-robot-music">Blog</a></li>
 						</ul>
 						<!--ul class="icons">
 							<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
@@ -51,7 +52,7 @@
 											<td style="width:10%;"></td>
 											<td style="width:22.5; min-width:180px;"><h3>macOS</h3></td>
 											<td style="width:22.5; min-width:180px;"><h3>iOS</h3></td>
-											<td style="width:22.5; min-width:180px;"><h3>Android</h3></td>
+											<td style="width:22.5; min-width:180px;"><h3>Android<br/>(and ChromeOS)</h3></td>
 											<td style="width:22.5; min-width:180px;"><h3>Web</h3></td>
 										</tr>
 									</thead>
