--- a/usage.html
+++ b/usage.html
@@ -29,7 +29,8 @@
 							<li><a href="index.html">Home</a></li>
 							<li class="active"><a href="usage.html">Usage</a></li>
 							<li><a href="platforms.html">Platforms</a></li>
-							<li><a href="https://medium.com/fully-automated-luxury-robot-music">Articles</a></li>
+							<li><a href="hardware.html">Hardware</a></li>
+							<li><a href="https://medium.com/fully-automated-luxury-robot-music">Blog</a></li>
 						</ul>
 						<!--ul class="icons">
 							<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
@@ -143,15 +144,13 @@
 									may be <i>copied</i> between Parts. It is the BeatScratch analogue to your Bassoon III Part. (Well, maybe a unified multi-voice Bassoon I, II and II part.)
 								</p>
 								<ul>
-										<li><b>MIDI Audio Parts</b>
-											<ul>
-												<li><i>Melodic Parts</i>: Can add up to 8 (7 if a drum track is being used). Will be mapped to MIDI channels according to their order.</li>
+										<!-- <li> -->
+											<!-- <b>MIDI Audio Parts</b> -->
+											<!-- <ul> -->
+												<li><i>Harmonic Parts</i>: Can add up to 8 (7 if a drum track is being used). Will be mapped to MIDI channels according to their order.</li>
 												<li><i>Drum Parts</i>: BeatScratch will only let you add one of these. Always maps to MIDI channel 10.</li>
-											</ul>
-										</li>
-										<li><b>Recorded Audio Parts</b>
-												<ul><li><i>Planned but unprioritized; these will not necessarily need an Instrument reference, though it could be used for postprocessing.</i></li></ul>
-										</li>
+											<!-- </ul> -->
+										<!-- </li> -->
 								</ul>
 								<h3>Sections</h3>
 								<p>
@@ -177,7 +176,7 @@
 										<ul>
 												<li><b>Keyboard</b>: Can be used to play any Part, including Drum parts. Can play notes outside of the current Chord. Used to specify custom chords along with the Orbifold. Move up and down by swiping from the left/right edges.</li>
 												<li><b>Colorboard</b> <i>(disabled by default in Pre-Release)</i>: Can only play Melodic Parts, and only notes in the current Chord. Move up and down by pointing the device up and down.</li>
-												<li><b>Orbifold</b>: Can only play Melodic Parts, and only notes in the current Chord. Used in choosing Chords for the Harmony.</li>
+												<li><b>Orbifold</b> <i>(not in Pre-Release)</i>:: Can only play Melodic Parts, and only notes in the current Chord. Used in choosing Chords for the Harmony.</li>
 										</ul>
 									</li>
 									<li>
