--- a/hardware.html
+++ b/hardware.html
@@ -55,7 +55,7 @@
 								<p>
 									BeatScratch is designed to be accessible for everyone. As such, it supports using pretty much 
 									<i>any standard MIDI controller</i> with your macOS, iOS or Android device. All you need is the appropriate 
-									USB cable for USB/USB-C devices (generally macOS/Android/ChromeOS), along with the appropriate dongle for Lightning devices (iOS devices 
+									USB cable for USB/USB-C devices (generally macOS, Android, or ChromeOS), along with the appropriate dongle for Lightning devices (iOS devices 
 									excluding the 2020 iPad Pro).
 								</p>
 								<p>
